# edu-tests-platform

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  prestart.sh  pyproject.toml  requirements.txt
admin/: dependencies.py  repository.py  schemas.py  services.py  views.py
auth/: __init__.py  dependencies.py  middleware.py  models.py  repository.py  schemas.py  services.py  views.py
certs/: README.md
common/: config.py  db_helper.py  enums.py  mixins.py  paginations.py
common/type/: annotated.py  jwt.py
migrations/: env.py
migrations/versions/: 2025_07_12_2259-0656ceed83f7_base.py
profile/: __init__.py
profile/specialist/: dependencies.py  repository.py
profile/student/: dependencies.py  exceptions.py  models.py  repository.py  schemas.py  services.py  views.py
profile/teacher/: dependencies.py  exceptions.py  models.py  repository.py  schemas.py  services.py  views.py
s3/: schemas.py  views.py
utils/: auth.py  email.py  s3.py
